--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,18 @@
     <title>Cocktail of the day</title>
 </head>
 <body>
-    <div class="decor"></div>
-    
-    <div>
-        <h1>Cocktail of the Day</h1>
-        <h3>API Playground Capstone App</h3>
+    <p class="subTitle">API Playground Capstone App</p>
+    <div class="header">
+        
+        <svg>
+            <text x="50%" y="15%" dy=".35em" text-anchor="middle">
+                Cocktail of the Day
+            </text>
+        </svg>
+        <!-- <h1>Cocktail of the Day</h1> -->
+        
     </div>
+    
 
     <form action="/" method="POST">
         <input type="submit" value="Get Your Drink">
@@ -37,7 +43,8 @@
     <div>
         <p><%= instr %></p>
     </div>
-    
+    <div class="decor"></div>
+    <div class="decor2"></div>
     
 </body>
 </html>
