--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <title>Cocktail of the day</title>
 </head>
 <body>
-    <p class="subTitle">API Playground Capstone App</p>
+    <p class="subTitle">API Playground Capstone App &copy;2023 by:andrei: bindasov</p>
     <div class="header">
         
         <svg>
